# programa-metodo-montante

./: CMakeLists.txt  README.md  interfaz_grafica.glade  main.cpp
clases/: LectorMatriz.cpp  LectorMatriz.h  MontanteSolver.cpp  MontanteSolver.h
interfaz_grafica/: VentanaPrincipal.cpp  VentanaPrincipal.h
